--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,4 +1,6 @@
-## [3.1.0]
+## [4.0.0]
+Changes:
+	- The default date format is now DAY/MONTH/YEAR. This can't be changed.
 Removals:
 	- Quest rewards are no longer tracked.
 	- Loot from the mailbox is no longer tracked. (This specifically affects items acquired from the Auction House.)
